--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,8 @@ pycrypto==2.6.1
 pygobject==3.26.1
 PyJWT==1.5.3
 pylint==2.3.1
+pylint-django==2.0.11
+pylint-plugin-utils==0.5
 pyOpenSSL==17.5.0
 pyserial==3.4
 python-apt==1.6.4
