--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ django-celery-results==1.1.2
 django-timezone-field==3.0
 django-widget-tweaks==1.4.5
 feedparser==5.2.1
+celery==4.3.0
+celery[redis]
+beautifulsoup4==4.8.0
+requests==2.18.4
+redis==3.3.8
