--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ celery[redis]
 beautifulsoup4==4.8.0
 requests==2.20.0
 redis==3.3.8
+psycopg2-binary=2.8.3
+mypy==0.720
+django-stubs=1.1.0
+pylint==2.3.1
+pylint-django==2.0.11
+pylint-plugin-utils==0.5
