--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-Django==2.2.5
+Django==2.2.10
 django-celery-beat==1.5.0
 django-celery-results==1.1.2
 django-timezone-field==3.0
 django-widget-tweaks==1.4.5
-django-filter=2.2.0
-django-stubs=1.1.0
-djangorestframework=3.10.3
-djangorestframework-stubs=1.0.0
+django-filter==2.2.0
+django-stubs==1.1.0
+djangorestframework==3.10.3
+djangorestframework-stubs==1.0.0
 feedparser==5.2.1
 celery==4.3.0
 celery[redis]
 beautifulsoup4==4.8.0
 requests==2.20.0
 redis==3.3.8
-psycopg2-binary=2.8.3
+psycopg2-binary==2.8.3
 mypy==0.720
-django-stubs=1.1.0
-flake8=3.7.8
-tox=3.14.0
+django-stubs==1.1.0
+flake8==3.7.8
+tox==3.14.0
