--- a/btools-pg.yaml
+++ b/btools-pg.yaml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: btools
+
+---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -14,14 +20,27 @@ spec:
   resources:
     requests:
       storage: 5Gi
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  namespace: btools
+  name: postgres-secret
+type: Opaque
+data:
+  admin_password: cGFzc3dvcmQ=
+
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: btools
-  name: postgres-cm
+  name: postgres-config
 data:
-  POSTGRES_PASSWORD: password
+  POSTGRES_DB: btools
+  POSTGRES_USER: telescreen
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -41,7 +60,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:10
+          image: postgres:10.12
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5432
@@ -51,11 +70,27 @@ spec:
           env:
           - name: POSTGRES_PASSWORD
             valueFrom:
-              configMapKeyRef:
-                name: postgres-cm
-                key: POSTGRES_PASSWORD
-      dnsPolicy: Default
+              secretKeyRef:
+                name: postgres-secret
+                key: admin_password
+          envFrom:
+          - configMapRef:
+              name: postgres-config
       volumes:
         - name: postgredb
           persistentVolumeClaim:
             claimName: btools-pvc
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: btools
+  name: postgres
+spec:
+  selector:
+    app: postgres
+  type: ClusterIP
+  ports:
+  - port: 5432
+    targetPort: 5432
